fix grids on IE

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 /* --- */
 
 
-
 /* Fade */
 
 @keyframes fading {
@@ -232,17 +231,20 @@ body {
 /* Content */
 
 .gridBody {
+		display: grid;
+	display: -ms-grid;
 	vertical-align: top;
+	 	grid-gap: 10px;
+ 	grid-template-columns: 80% 15%;
+ 		 -ms-grid-columns: 80% 15%;
+ 	grid-template-rows: 100% 100%;
+ 		 -ms-grid-rows: 100% 100%;
 	padding: 0;
 	width: 70%;
 	margin: 0 auto;
 	-ms-background-attachment: fixed;
 		background-attachment: fixed;
 	min-height: 100%;
-	display: grid;
- 	grid-gap: 10px;
- 	grid-template-columns: 80% 15%;
- 	grid-template-rows: 100% 100%;
 
 }
 
@@ -255,8 +257,10 @@ body {
 		-ms-flex-direction: column;
 			flex-direction: column;
 	vertical-align: top;
-	grid-row: 1;
-	grid-column: 2;
+	-ms-grid-row: 1;
+		grid-row: 1;
+	-ms-grid-column: 2;
+		grid-column: 2;
 }
  
 .sideObject {
@@ -273,11 +277,14 @@ body {
 
 .tabContent {
 	display: none; 
-	animation: fading .3s;
+	-webkit-animation: fading .3s; 
+	        animation: fading .3s;
 	padding: 0 10px 10px 10px;
 	vertical-align: top;
-	grid-row: 1;
-	grid-column: 1;
+	-ms-grid-row: 1;
+		grid-row: 1;
+	-ms-grid-column: 1;
+		grid-column: 1;
 }
 
 /* --- */
